# mole-rs

./: .gitignore  Cargo.toml  README.md  RELEASING.md  SECURITY_AUDIT.md  install.sh
src/: main.rs
src/cli/: mod.rs
src/commands/: analyze.rs  clean.rs  mod.rs  optimize.rs  purge.rs  status.rs  uninstall.rs
src/core/: config.rs  distro.rs  errors.rs  filesystem.rs  mod.rs  paths.rs  security.rs  system.rs  tests.rs
src/tui/: app.rs  menu.rs  mod.rs
tests/: clean_test.rs  cli_test.rs  purge_test.rs
